# vonatinfo-scraper

./: .gitignore  api-test.ipynb  heatmap.html  initial-schema.sql  main.py  pyproject.toml
data/: train-lines.kml
logger-go/: go.mod  main.go
notebooks/: api-test.ipynb  test.ipynb  timeseries.ipynb  trainlines.ipynb  vitezy-console.sql
src/: api.py  db.py  db_file_server.py
